--- a/wordcompletion/creationsourcedetailsui.ui
+++ b/wordcompletion/creationsourcedetailsui.ui
@@ -1,184 +1,192 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
-<class>CreationSourceDetailsUI</class>
-<widget class="QWidget">
-    <property name="name">
-        <cstring>CreationSourceDetailsUI</cstring>
-    </property>
-    <property name="geometry">
-        <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>421</width>
-            <height>189</height>
-        </rect>
-    </property>
-    <grid>
-        <property name="name">
-            <cstring>unnamed</cstring>
-        </property>
-        <widget class="QCheckBox" row="3" column="0" rowspan="1" colspan="2">
-            <property name="name">
-                <cstring>spellCheckBox</cstring>
-            </property>
-            <property name="text">
-                <string>&amp;Compare to OpenOffice.org dictionary:</string>
-            </property>
-            <property name="checked">
-                <bool>false</bool>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>If you select this check box the words are spell-checked before they are inserted into the new dictionary.</string>
-            </property>
-        </widget>
-        <widget class="QLabel" row="1" column="0">
-            <property name="name">
-                <cstring>encodingLabel</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>5</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="text">
-                <string>Character &amp;encoding:</string>
-            </property>
-            <property name="buddy" stdset="0">
-                <cstring>encodingCombo</cstring>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>With this combo box you select the character encoding used to load text files. This combo box is not used for XML files or for dictionary files.</string>
-            </property>
-        </widget>
-        <widget class="QLabel" row="0" column="0">
-            <property name="name">
-                <cstring>urlLabel</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>5</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="text">
-                <string>&amp;Filename:</string>
-            </property>
-            <property name="buddy" stdset="0">
-                <cstring>url</cstring>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>With this input field you specify which file you want to load for creating the new dictionary.</string>
-            </property>
-        </widget>
-        <widget class="KUrlRequester" row="0" column="1">
-            <property name="name">
-                <cstring>url</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>5</hsizetype>
-                    <vsizetype>5</vsizetype>
-                    <horstretch>1</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>With this input field you specify which file you want to load for creating the new dictionary.</string>
-            </property>
-        </widget>
-        <widget class="KComboBox" row="1" column="1">
-            <property name="name">
-                <cstring>encodingCombo</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>1</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>1</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>With this combo box you select the character encoding used to load text files. This combo box is not used for XML files or for dictionary files.</string>
-            </property>
-        </widget>
-        <widget class="KUrlRequester" row="4" column="1">
-            <property name="name">
-                <cstring>ooDictURL</cstring>
-            </property>
-            <property name="enabled">
-                <bool>false</bool>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>5</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>1</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>With this input field you select the OpenOffice.org directory that will be used to spellcheck the words of the new dictionary.</string>
-            </property>
-        </widget>
-        <widget class="QLabel" row="2" column="0">
-            <property name="name">
-                <cstring>languageLabel</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>5</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="text">
-                <string>&amp;Language:</string>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>With this combo box you decide which language should be associated with the new dictionary.</string>
-            </property>
-        </widget>
-    </grid>
-</widget>
-<connections>
-    <connection>
-        <sender>spellCheckBox</sender>
-        <signal>toggled(bool)</signal>
-        <receiver>ooDictURL</receiver>
-        <slot>setEnabled(bool)</slot>
-    </connection>
-</connections>
-<includes>
-    <include location="global" impldecl="in implementation">kinputdialog.h</include>
-    <include location="local" impldecl="in implementation">klanguagebutton.h</include>
-    <include location="local" impldecl="in implementation">klanguagebuttonhelper.h</include>
-    <include location="local" impldecl="in implementation">creationsourcedetailsui.ui.h</include>
-</includes>
-<forwards>
-    <forward>class KLanguageButton</forward>
-</forwards>
-<variables>
-    <variable access="public">KLanguageButton *languageButton;</variable>
-</variables>
-<slots>
-    <slot access="protected" specifier="non virtual">languageButton_activated( int index )</slot>
-</slots>
-<functions>
-    <function access="private" specifier="non virtual">init()</function>
-</functions>
-<layoutdefaults spacing="6" margin="11"/>
-<includehints>
-    <includehint>kinputdialog.h</includehint>
-    <includehint>kpushbutton.h</includehint>
-    <includehint>kcombobox.h</includehint>
-    <includehint>kurlrequester.h</includehint>
-    <includehint>kinputdialog.h</includehint>
-    <includehint>kpushbutton.h</includehint>
-</includehints>
-</UI>
+<ui version="4.0" >
+ <author></author>
+ <comment></comment>
+ <exportmacro></exportmacro>
+ <class>CreationSourceDetailsUI</class>
+ <widget class="QWidget" name="CreationSourceDetailsUI" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>421</width>
+    <height>189</height>
+   </rect>
+  </property>
+  <layout class="QGridLayout" >
+   <property name="margin" >
+    <number>11</number>
+   </property>
+   <property name="spacing" >
+    <number>6</number>
+   </property>
+   <item row="3" column="0" colspan="2" >
+    <widget class="QCheckBox" name="spellCheckBox" >
+     <property name="whatsThis" >
+      <string>If you select this check box the words are spell-checked before they are inserted into the new dictionary.</string>
+     </property>
+     <property name="text" >
+      <string>&amp;Compare to OpenOffice.org dictionary:</string>
+     </property>
+     <property name="checked" >
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" >
+    <widget class="QLabel" name="encodingLabel" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>5</hsizetype>
+       <vsizetype>0</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="whatsThis" >
+      <string>With this combo box you select the character encoding used to load text files. This combo box is not used for XML files or for dictionary files.</string>
+     </property>
+     <property name="text" >
+      <string>Character &amp;encoding:</string>
+     </property>
+     <property name="buddy" >
+      <cstring>encodingCombo</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" >
+    <widget class="QLabel" name="urlLabel" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>5</hsizetype>
+       <vsizetype>0</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="whatsThis" >
+      <string>With this input field you specify which file you want to load for creating the new dictionary.</string>
+     </property>
+     <property name="text" >
+      <string>&amp;Filename:</string>
+     </property>
+     <property name="buddy" >
+      <cstring>url</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" >
+    <widget class="KUrlRequester" name="url" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>5</hsizetype>
+       <vsizetype>5</vsizetype>
+       <horstretch>1</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="whatsThis" >
+      <string>With this input field you specify which file you want to load for creating the new dictionary.</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" >
+    <widget class="KComboBox" name="encodingCombo" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>1</hsizetype>
+       <vsizetype>0</vsizetype>
+       <horstretch>1</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="whatsThis" >
+      <string>With this combo box you select the character encoding used to load text files. This combo box is not used for XML files or for dictionary files.</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1" >
+    <widget class="KUrlRequester" name="ooDictURL" >
+     <property name="enabled" >
+      <bool>false</bool>
+     </property>
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>5</hsizetype>
+       <vsizetype>0</vsizetype>
+       <horstretch>1</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="whatsThis" >
+      <string>With this input field you select the OpenOffice.org directory that will be used to spellcheck the words of the new dictionary.</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" >
+    <widget class="KLanguageButton" name="languageButton" />
+   </item>
+   <item row="2" column="0" >
+    <widget class="QLabel" name="languageLabel" >
+     <property name="sizePolicy" >
+      <sizepolicy>
+       <hsizetype>5</hsizetype>
+       <vsizetype>0</vsizetype>
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="whatsThis" >
+      <string>With this combo box you decide which language should be associated with the new dictionary.</string>
+     </property>
+     <property name="text" >
+      <string>&amp;Language:</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11" />
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>KUrlRequester</class>
+   <extends>QFrame</extends>
+   <header>kurlrequester.h</header>
+   <container>0</container>
+   <pixmap></pixmap>
+  </customwidget>
+  <customwidget>
+   <class>KLanguageButton</class>
+   <extends>QWidget</extends>
+   <header>klanguagebutton.h</header>
+   <container>0</container>
+   <pixmap></pixmap>
+  </customwidget>
+  <customwidget>
+   <class>KComboBox</class>
+   <extends>QComboBox</extends>
+   <header>kcombobox.h</header>
+   <container>0</container>
+   <pixmap></pixmap>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections>
+  <connection>
+   <sender>spellCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ooDictURL</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+</ui>
