Changed the accelerator key since 'C' is already used by the "Cancel" button
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=734794

--- a/wordcompletion/kdedocsourceui.ui
+++ b/wordcompletion/kdedocsourceui.ui
@@ -25,7 +25,7 @@
       <string>If you select this check box the words from the KDE documentation are spell-checked before they are inserted into the new dictionary.</string>
      </property>
      <property name="text" >
-      <string>&amp;Compare to OpenOffice.org dictionary:</string>
+      <string>C&amp;ompare to OpenOffice.org dictionary:</string>
      </property>
      <property name="checked" >
       <bool>false</bool>
