KTTSD is now Jovie CCMAIL:jpwhiting@kde.org
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1175686

--- a/texttospeechconfigurationui.ui
+++ b/texttospeechconfigurationui.ui
@@ -124,10 +124,10 @@
       <item>
         <widget class="QCheckBox" name="useKttsd" >
           <property name="text" >
-            <string>&amp;Use KTTSD speech service if possible</string>
+            <string>&amp;Use Jovie speech service if possible</string>
           </property>
           <property name="whatsThis" stdset="0" >
-            <string>This check box specifies KMouth tries to use the KTTSD speech service prior to calling the speech synthesizer directly. The KTTSD speech service is a KDE daemon which gives KDE applications a standardized interface for speech synthesis and is currently developed in CVS.</string>
+            <string>This check box specifies KMouth tries to use the Jovie speech service prior to calling the speech synthesizer directly. The Jovie speech service is a KDE daemon which gives KDE applications a standardized interface for speech synthesis and is currently developed in SVN.</string>
           </property>
         </widget>
       </item>
