--- a/wordcompletion/creationsourceui.ui
+++ b/wordcompletion/creationsourceui.ui
@@ -1,6 +1,6 @@
 <!DOCTYPE UI><UI version="3.0" stdsetdef="1">
 <class>CreationSourceUI</class>
-<widget class="QWidget">
+<widget class="TQWidget">
     <property name="name">
         <cstring>CreationSourceUI</cstring>
     </property>
@@ -16,7 +16,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QRadioButton" row="0" column="0" rowspan="1" colspan="2">
+        <widget class="TQRadioButton" row="0" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>createButton</cstring>
             </property>
@@ -30,7 +30,7 @@
                 <string>If you select this box a new dictionary is created by either loading a dictionary file or by counting the individual words in a text.</string>
             </property>
         </widget>
-        <widget class="QRadioButton" row="4" column="0" rowspan="1" colspan="2">
+        <widget class="TQRadioButton" row="4" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>mergeButton</cstring>
             </property>
@@ -41,7 +41,7 @@
                 <string>If you select this box a new dictionary is created by merging existing dictionaries.</string>
             </property>
         </widget>
-        <widget class="QRadioButton" row="2" column="1">
+        <widget class="TQRadioButton" row="2" column="1">
             <property name="name">
                 <cstring>fileButton</cstring>
             </property>
@@ -63,7 +63,7 @@
                 <string>If you select this box a new dictionary is created by loading a file. You may either select an XML file, a standard text file or a file containing a word completion dictionary. If you select a standard text file or an XML file the frequentness of the individual words is detected by simply counting the occurrences of each word.</string>
             </property>
         </widget>
-        <widget class="QRadioButton" row="1" column="1">
+        <widget class="TQRadioButton" row="1" column="1">
             <property name="name">
                 <cstring>kdeDocButton</cstring>
             </property>
@@ -88,7 +88,7 @@
                 <string>If you select this box a new dictionary is created by parsing the KDE documentation. The frequentness of the individual words is detect by simply counting the occurrences of each word.</string>
             </property>
         </widget>
-        <widget class="QRadioButton" row="3" column="1">
+        <widget class="TQRadioButton" row="3" column="1">
             <property name="name">
                 <cstring>directoryButton</cstring>
             </property>
@@ -120,14 +120,14 @@
             <property name="sizeType">
                 <enum>Fixed</enum>
             </property>
-            <property name="sizeHint">
+            <property name="tqsizeHint">
                 <size>
                     <width>20</width>
                     <height>40</height>
                 </size>
             </property>
         </spacer>
-        <widget class="QRadioButton" row="5" column="0" rowspan="1" colspan="2">
+        <widget class="TQRadioButton" row="5" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>emptyButton</cstring>
             </property>
@@ -161,19 +161,19 @@
     </connection>
 </connections>
 <includes>
-    <include location="global" impldecl="in implementation">qbuttongroup.h</include>
+    <include location="global" impldecl="in implementation">tqbuttongroup.h</include>
     <include location="local" impldecl="in implementation">creationsourceui.ui.h</include>
 </includes>
 <forwards>
     <forward>class QButtonGroup</forward>
 </forwards>
 <variables>
-    <variable access="public">QButtonGroup *group2;</variable>
-    <variable access="public">QButtonGroup *group1;</variable>
+    <variable access="public">TQButtonGroup *group2;</variable>
+    <variable access="public">TQButtonGroup *group1;</variable>
 </variables>
 <functions>
     <function access="private" specifier="non virtual">init()</function>
     <function access="private" specifier="non virtual">destroy()</function>
 </functions>
-<layoutdefaults spacing="6" margin="11"/>
+<tqlayoutdefaults spacing="6" margin="11"/>
 </UI>
