--- a/wordcompletion/kdedocsourceui.ui
+++ b/wordcompletion/kdedocsourceui.ui
@@ -1,6 +1,6 @@
 <!DOCTYPE UI><UI version="3.0" stdsetdef="1">
 <class>KDEDocSourceUI</class>
-<widget class="QWidget">
+<widget class="TQWidget">
     <property name="name">
         <cstring>KDEDocSourceUI</cstring>
     </property>
@@ -16,7 +16,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QCheckBox" row="1" column="0" rowspan="1" colspan="2">
+        <widget class="TQCheckBox" row="1" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>spellCheckBox</cstring>
             </property>
@@ -49,7 +49,7 @@
                 <string>With this input field you select the OpenOffice.org directory that will be used to spellcheck the words of the new dictionary.</string>
             </property>
         </widget>
-        <widget class="QLabel" row="0" column="0">
+        <widget class="TQLabel" row="0" column="0">
             <property name="name">
                 <cstring>languageLabel</cstring>
             </property>
@@ -92,7 +92,7 @@
 <functions>
     <function access="private" specifier="non virtual">init()</function>
 </functions>
-<layoutdefaults spacing="6" margin="11"/>
+<tqlayoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
