--- a/wordcompletion/wordcompletionui.ui
+++ b/wordcompletion/wordcompletionui.ui
@@ -1,6 +1,6 @@
 <!DOCTYPE UI><UI version="3.0" stdsetdef="1">
 <class>WordCompletionUI</class>
-<widget class="QWidget">
+<widget class="TQWidget">
     <property name="name">
         <cstring>WordCompletionUI</cstring>
     </property>
@@ -16,9 +16,9 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QLayoutWidget" row="0" column="1">
+        <widget class="TQLayoutWidget" row="0" column="1">
             <property name="name">
-                <cstring>layout1</cstring>
+                <cstring>tqlayout1</cstring>
             </property>
             <vbox>
                 <property name="name">
@@ -141,7 +141,7 @@
                     <property name="sizeType">
                         <enum>Expanding</enum>
                     </property>
-                    <property name="sizeHint">
+                    <property name="tqsizeHint">
                         <size>
                             <width>20</width>
                             <height>240</height>
@@ -150,9 +150,9 @@
                 </spacer>
             </vbox>
         </widget>
-        <widget class="QLayoutWidget" row="0" column="0">
+        <widget class="TQLayoutWidget" row="0" column="0">
             <property name="name">
-                <cstring>layout2</cstring>
+                <cstring>tqlayout2</cstring>
             </property>
             <vbox>
                 <property name="name">
@@ -191,7 +191,7 @@
                         <string>This list contains all available dictionaries for the word completion. KMouth will display a combo box next to the edit field in the main window if this list contains more than one dictionary. You can use this combo box in order to select the dictionary that actually gets used for the word completion.</string>
                     </property>
                 </widget>
-                <widget class="QGroupBox">
+                <widget class="TQGroupBox">
                     <property name="name">
                         <cstring>selectedDictionaryDetails</cstring>
                     </property>
@@ -213,7 +213,7 @@
                         <property name="name">
                             <cstring>unnamed</cstring>
                         </property>
-                        <widget class="QLabel" row="1" column="0">
+                        <widget class="TQLabel" row="1" column="0">
                             <property name="name">
                                 <cstring>languageLabel</cstring>
                             </property>
@@ -224,7 +224,7 @@
                                 <string>With this combo box you select the language associated with the selected dictionary.</string>
                             </property>
                         </widget>
-                        <widget class="QLabel" row="0" column="0">
+                        <widget class="TQLabel" row="0" column="0">
                             <property name="name">
                                 <cstring>dictionaryNameLabel</cstring>
                             </property>
@@ -273,13 +273,13 @@
 <variables>
     <variable access="public">KLanguageButton *languageButton;</variable>
 </variables>
-<slots>
+<Q_SLOTS>
     <slot access="protected" specifier="non virtual">languageButton_activated( int index )</slot>
-</slots>
+</Q_SLOTS>
 <functions>
     <function access="private" specifier="non virtual">init()</function>
 </functions>
-<layoutdefaults spacing="6" margin="11"/>
+<tqlayoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>kurlrequester.h</includehint>
     <includehint>kpushbutton.h</includehint>
